# X-ray-imaging-analysis

./: .gitignore  MTF.py  Makefile  NPS.py  README.md  comparison_tool.py  contrast_threshold.py  detector_conversion.py  dicom_utils.py  dicomizer.py  docker-compose.yml  dockerfile  edge_debug.py  exe_analyzer.py  exe_pckginstaller.py  main.py  menu_analyzer.py  metadata_summary.py  pyproject.toml  raw_endian.py  requirements.txt  threshold_contrast.py  uniformity.py
.github/workflows/: config.yml
.streamlit/: config.toml
docs/: app.md  core.md  developer_tools.md  dicom_analysis.md  explicit_noise_decomposition.md  flat_panel_qa.md
src/app/menu_analyzer/: __init__.py  app.py  catalog.py  file_detection.py  image_loader.py  raw_params.py  workflow.py
src/core/io/: analysis_payload.py
src/qa/dicom_analysis/: postprocessing_constancy.py
src/qa/flat_panel_qa/: detector_conversion.py  dqe.py  mtf.py  nps.py  threshold_contrast.py
src/tools/developer_tools/: comparison_tool.py
