[project]
name = "x-ray-imaging-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.3.0",
    "opencv-python==4.11.0.86",
    "pyarrow==21.0.0",
    "pydicom==3.0.1",
    "pylinac",
    "scikit-image==0.25.2",
    "statsmodels>=0.14.0",
    "streamlit==1.45.1",
]

[tool.uv.sources]
pylinac = { git = "https://github.com/jlleongarcia/pylinac.git", rev = "6a353fbb131624c055477a137290afd52c8543dd" }
